00.homepage/kubernetes/01.homepage-nginx__Namespace.yaml

---

apiVersion: v1
kind: Namespace
metadata:
  name: oci-devops
  annotations:
    field.cattle.io/containerDefaultResourceLimit: '{}'
#    key: string
  labels:
    {}
#    key: string
#  namespace: string
spec:
#  finalizers:
#    - string
