00.homepage/kubernetes/03.homepage-nginx__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: oci-devops
  labels:
    app: nginx-service
spec:
  # clusterIP: "None"
  type: ClusterIP #"ClusterIP", "ExternalName", "LoadBalancer", "NodePort"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: "tcp-80-to-80"
      #nodePort: 30080
  selector:
    app: nginx-deployment
